tests/baselines/reference/asyncConstructor.errors.txt
tests/cases/conformance/async/downlevel/asyncConstructor.ts(7,3): error TS1089: 'async' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/async/downlevel/asyncConstructor.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {  
      async constructor() {    
      ~~~~~
!!! error TS1089: 'async' modifier cannot appear on a constructor declaration.
      }
    }